<resources>
    <string name="app_name">АРМ Метролог</string>
    <string name="nav_home">Главная</string>
    <string name="nav_about">О приложении</string>
    <string name="nav_settings">Настройки</string>
    <string name="nav_contact">Связаться с разработчиком</string>
    <string name="navigation_drawer_open">Открыть навигацию</string>
    <string name="navigation_drawer_close">Закрыть навигацию</string>
    <string name="menu_units">Единицы измерения</string>
    <string name="menu_current_loop">Токовая петля</string>
    <string name="about_message">"АРМ Метролог"&#10;Версия приложения 0.1</string>
    <string name="current_loop_title">Шкала-Сигнал</string>
    <string name="current_loop_scale_type">Тип шкалы</string>
    <string name="current_loop_physical_range">Физическая величина</string>
    <string name="current_loop_signal_range">Унифицированный сигнал</string>
    <string name="current_loop_physical_value">Физическая величина</string>
    <string name="current_loop_signal_value">Унифицированный сигнал</string>
    <string name="current_loop_start">Начало</string>
    <string name="current_loop_end">Конец</string>
    <string-array name="current_loop_scale_types">
        <item>Линейная шкала</item>
        <item>Линейная, убывающая шкала</item>
        <item>Квадратичная шкала</item>
        <item>Квадратичная, убывающая шкала</item>
        <item>Корнеизвлекающая</item>
        <item>Корнеизвлекающая, убывающая шкала</item>
    </string-array>
    <string name="units_title">Единицы измерения</string>
    <string name="units_temperature">Температура</string>
    <string name="units_time">Время</string>
    <string name="units_speed">Скорость</string>
    <string name="temperature_title">Температура</string>
    <string name="temperature_section_si">Международная система (СИ)</string>
    <string name="temperature_section_imperial">США и Британия</string>
    <string name="temperature_section_other">Иные</string>
    <string name="temperature_kelvin">Кельвин</string>
    <string name="temperature_celsius">Цельсий</string>
    <string name="temperature_fahrenheit">Фаренгейт</string>
    <string name="temperature_rankine">Ранкин</string>
    <string name="temperature_reaumur">Реомюр</string>
    <string name="temperature_symbol_kelvin">K</string>
    <string name="temperature_symbol_celsius">°C</string>
    <string name="temperature_symbol_fahrenheit">°F</string>
    <string name="temperature_symbol_rankine">°R</string>
    <string name="temperature_symbol_reaumur">°Re</string>
    <string name="temperature_kelvin_description">Кельвин — основная единица термодинамической температуры в системе СИ.</string>
    <string name="temperature_celsius_description">Градус Цельсия — единица температуры, используемая для измерений в большинстве стран мира.</string>
    <string name="temperature_fahrenheit_description">Градус Фаренгейта — единица температуры, принятая в США и ряде других стран.</string>
    <string name="temperature_rankine_description">Градус Ранкина — абсолютная шкала температуры, аналог Кельвина в градусах Фаренгейта.</string>
    <string name="temperature_reaumur_description">Градус Реомюра — историческая шкала температуры, делящая диапазон между льдом и кипящей водой на 80 частей.</string>
    <string name="time_title">Время</string>
    <string name="time_section_si">Основная единица СИ — секунда</string>
    <string name="time_section_other">Производные и внесистемные</string>
    <string name="time_second">Секунда</string>
    <string name="time_millennium">Тысячелетие</string>
    <string name="time_century">Век</string>
    <string name="time_year">Год</string>
    <string name="time_month">Месяц</string>
    <string name="time_week">Неделя</string>
    <string name="time_day">Сутки</string>
    <string name="time_hour">Час</string>
    <string name="time_minute">Минута</string>
    <string name="time_millisecond">Миллисекунда</string>
    <string name="time_microsecond">Микросекунда</string>
    <string name="time_symbol_second">с</string>
    <string name="time_symbol_millennium">тыс. лет</string>
    <string name="time_symbol_century">в</string>
    <string name="time_symbol_year">г</string>
    <string name="time_symbol_month">мес</string>
    <string name="time_symbol_week">нед</string>
    <string name="time_symbol_day">сут</string>
    <string name="time_symbol_hour">ч</string>
    <string name="time_symbol_minute">мин</string>
    <string name="time_symbol_millisecond">мс</string>
    <string name="time_symbol_microsecond">мкс</string>
</resources>
